# enumerare

./: Cargo.toml  LICENSE  README.md  flake.nix
.github/: LICENSE
.github/workflows/: ci-label.yml
enumerare-macros/: Cargo.toml
enumerare-macros/src/: helpers.rs  lib.rs  macros.rs
src/: lib.rs
tests/: cycle.rs  default-enum.rs  sized-enum.rs
