[package]
name = "enumerare"
edition = "2021"
version = "0.1.0"
description = "Utilities for working with enums."
authors = [
	"Kludge Cyber Systems <contact@kludgecs.com>"
]
documentation = "https://docs.rs/enumerare"
readme = "README.md"
repository = "https://github.com/kludge-cs/enumerare"
license = "MIT"

[features]
default = ["macros"]
macros = ["enumerare-macros"]

[dependencies]
enumerare-macros = { path = "./enumerare-macros", version = "0.1.0", optional = true }
