[package]
name = "enumerare-macros"
version = "0.1.0"
authors = [
	"Kludge Cyber Systems <contact@k-cs.co>"
]
description = "Utilities for working with enums."
documentation = "https://docs.rs/enumerare"
repository = "https://github.com/kludge-cs/enumerare"
license = "MIT"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.101"
quote = "1.0.41"
syn = "2.0.106"

[features]
